# Shanks

./: CMakeLists.txt  main.cpp
src/file/: CMakeLists.txt  file_util.cpp  file_util.h
src/qt_widget/: CMakeLists.txt  application.cpp  application.h  main_window.cpp  main_window.h  main_window_manager.cpp  main_window_manager.h  qwidget_util.cpp  qwidget_util.h  render_widget.cpp  render_widget.h  resource_manager.cpp  resource_manager.h  yuv_left_widget.cpp  yuv_left_widget.h  yuv_widget.cpp  yuv_widget.h
src/qt_widget/resources/: style.qss  widget.qrc  yuv_widget.ui
src/qt_widget/resources/shader/: fragment_shader.glsl  vertex_shader.glsl
src/qt_widget/resources/yuv/: yuv_left_widget.ui  yuv_widget.ui
src/widget/: CMakeLists.txt  application.cpp  application.h  main_window.cpp  main_window.h  resource.cpp  resource.h  resources.h  window.cpp  window.h
src/widget/widget.assets/: widget.gresource.xml
src/widget/widget.assets/menu/: menu_bar.ui
src/widget/widget.assets/widget/: window.ui
test/: CMakeLists.txt  test.cpp
